# python-agent-template

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  copier.yml  pyproject.toml
.agent-memory/: INDEX.md  memories.jsonl
.agentrules/: CODING_STANDARDS.md  COLLABORATION.md  NAMING_CONVENTIONS.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
configs/: default.yaml
docs/superpowers/plans/: 2026-06-25-automated-release-workflow.md  2026-06-25-solo-session-local-memory.md
docs/superpowers/specs/: 2026-06-25-automated-release-workflow-design.md  (+1 more)
memory/: __init__.py  __main__.py  cli.py  client.py  index.py  insights.py  records.py
scripts/: compaction_memory.sh  memory_extractor.sh
scripts/extractors/: claude.sh  codex.sh
scripts/hooks/: precompact_claude.sh
src/python_agent_template/: __init__.py  config.py  logging_config.py
template/: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  {{'pyproject.toml'}}
template/.agent-memory/: INDEX.md
template/.agentrules/: COLLABORATION.md  NAMING_CONVENTIONS.md  PR_TEMPLATE.md
template/memory/: __init__.py  client.py
template/scripts/: commit_advisor.sh
template/tests/: test_config.py
template/{% if include_agent_memory %}memory{% endif %}/: cli.py  logging_config.py  mcp_server.py
template/{% if include_agent_rules %}.agentrules{% endif %}/: CODING_STANDARDS.md  COLLABORATION.md
tests/: test_compaction_scripts.py
tests/memory/: test_cli.py  test_cli_remember_insights.py  test_index.py  test_insights.py  test_records.py
tests/python_agent_template/: test_config.py
(+26 files in other folders)
