[project]
name = "python-agent-template"
version = "0.1.0"
description = "Reusable Python project scaffold with AI-agent tooling baked in."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "types-pyyaml>=6.0",
]
memory = [
    "mem0ai>=2.0.7",
    "faiss-cpu>=1.7.4",
    "fastembed>=0.3.1",
]
mcp = [
    "mcp>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "D", "ANN", "NPY", "N", "PT"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D102", "D103", "D104", "ANN201"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
mypy_path = "."
explicit_package_bases = true
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# mem0, faiss, and fastembed ship no type stubs — see
# .agentrules/CODING_STANDARDS.md Rule 1.
module = ["mem0.*", "faiss.*", "fastembed.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=memory --cov-report=term-missing"
